# agentic-clinical-auditor

./: .env.example  .gitignore  README.md  config.py  dashboard.py  main.py  pyproject.toml  requirements.txt
agents/: checker.py  extractor.py  workflow.py
api/: main.py
evaluation/: evaluator.py
kb/: ddi_rules.json  knowledge_base.py  rxnorm.db
utils/: models.py
